Responsive: fix hero description creating horizontal scrollbar

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -25,7 +25,7 @@
     }
 
     .hero__description {
-      transform: scale(.75) translateY(-100%);
+      transform: scale(.75) translateY(-1.5rem);
     }
   }
 }
